--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-/* 01/25 Font responsive = / 2.826 */
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200;300;400;600;700&family=Syncopate:wght@400;700&display=swap');
 * {
   margin: 0;
   padding: 0;
