--- a/css/style.css
+++ b/css/style.css
@@ -480,12 +480,13 @@ section {
   -webkit-text-stroke-color: var(--dark);
 }
 .textBox {
-  margin-bottom: 20%;
-  padding: 30px 0;
+  margin-bottom: 15%;
+  /* padding: 30px 0; */
+  padding: 30px calc(8vw - 15px);
 }
 
 .textBox p {
-  padding: 0 calc(8vw - 15px);
+  /* padding: 0 calc(8vw - 15px); */
   line-height: 1.3;
   letter-spacing: 2px;
   font-weight: 500;
