--- a/css/style.css
+++ b/css/style.css
@@ -923,7 +923,7 @@ section {
 .foot {
   width: 100%;
   position: absolute;
-  bottom: 1em;
+  bottom: 30px;
   padding: 18px 0;
   display: grid;
   place-items: center;
