--- a/css/queries.css
+++ b/css/queries.css
@@ -42,6 +42,9 @@
     width: 100%;
     padding: 2em;
   }
+  .project .text p {
+    padding: 0;
+  }
 }
 @media screen and (max-width: 1200px) {
   #contact {
